# brinner_and_learn

./: .gitignore  .nojekyll  DESCRIPTION  README.md  _quarto.yml  index.html  index.qmd  robots.txt  search.json  sitemap.xml
.github/workflows/: build_site.yml  (+1 more)
_site/: index.html  search.json
live_demos/2026-03-16_libraries_dont_run_themselves/: README.md  pyproject.toml
live_demos/2026-03-16_libraries_dont_run_themselves/scripts/: frame_wall.py
live_demos/2026-03-16_libraries_dont_run_themselves/src/mini_house/: __init__.py  app.py  tools.py
slides/: 2025-01-31_tdd_presentation.html  2025-01-31_tdd_presentation.qmd  2025-02-11_pr_practices.html  2025-02-11_pr_practices.qmd  2025-03-11_tickets.html  2025-03-11_tickets.qmd  2025-04-08_data_pipeline_manifest.html  2025-04-08_data_pipeline_manifest.qmd  2025-04-24_python_testing_101.html  2025-04-24_python_testing_101.qmd  2025-05-06_12FactorPt1.html  2025-05-06_12FactorPt1.qmd  2025-06-03_twelve_factor_demo.html  2025-06-03_twelve_factor_demo.qmd  2025-07-29_learning_docker.html  2025-07-29_learning_docker.qmd  2025-10-21_text_encoding.html  2025-10-21_text_encoding.qmd  2025-11-04_okrs.html  2025-11-04_okrs.qmd  2025-12-02_dotfiles.html  2025-12-02_dotfiles.qmd  2026-01-13_conventional_commits.html  2026-01-13_conventional_commits.qmd  2026-01-27_build-data-pipelines.html  2026-01-27_build-data-pipelines.qmd  2026-03-16_libraries_dont_run_themselves.html  2026-03-16_libraries_dont_run_themselves.qmd  2026-04-21_llms_for_software_development.html  2026-04-21_llms_for_software_development.qmd  _metadata.yml
(+22 files in other folders)
