[project]
name = "libraries-cant-run-themselves-demo"
version = "0.1.0"
description = "Tiny uv demo showing a library, a script, and an application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_house"]

[project.scripts]
mini-house = "mini_house.app:main"
